--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 <body>
 <div class="container navbar">
     <nav class="nav" id="nav-b">
-        <a class="logo" aria-current="page" href="#"><img src="./img/logorestaurant-removebg-preview.png" alt="logo" class="img-hero" id="image"></a>
+        <a class="logo" aria-current="page" href="#"><img src="logorestaurant-removebg-preview.png" alt="logo" class="img-hero" id="image"></a>
         <a class="nav-link" href="#lastoria">La nostra storia</a>
         <a class="nav-link" href="#prenotatavolo">Prenota tavolo</a>
-        <a href="#"><img src="./img/facebook.png" class="social social1"></a>
-        <a href="#"><img src="./img/instagram.png" class="social"></a>
+        <a href="#"><img src="facebook.png" class="social social1"></a>
+        <a href="#"><img src="instagram.png" class="social"></a>
     </nav>
 </div>
 <div class="hero">
 <video autoplay muted loop id="video-back">
-    <source src="./img/production ID_3769033.mp4" type="video/mp4">
+    <source src="production ID_3769033.mp4" type="video/mp4">
 </video>
 </div>
 
 <a name="lastoria">
 <div class="storia">
     <div class="img-storia">
-        <img src="./img/fotostoria.jpg" alt="foto" class="image">
+        <img src="fotostoria.jpg" alt="foto" class="image">
     </div>
     <div class="text-storia">
         <h2 CLASS="testo-storia">LA NOSTRA STORIA</h2>
@@ -50,7 +50,7 @@
 
 
 <div class="jumb">
-        <img src="./img/cuore-1152x1084.png" alt="romantico" class="cuore">
+        <img src="cuore-1152x1084.png" alt="romantico" class="cuore">
         
     <div>
         <h3 class="titolo-storia titolo-san">Per san valentino un menu speciale</h3>
@@ -61,25 +61,25 @@
 <div class="piatti">
     <h4 class="titolo-storia">qualche piatto...</h4>
     <div class="card" style="width: 18rem;">
-        <img src="./img/pexels-dana-tentis-725997.jpg" class="card-img-top" alt="...">
+        <img src="pexels-dana-tentis-725997.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
     <div class="card" style="width: 18rem;">
-        <img src="./img/pexels-macedo-fotografo-10883374.jpg" class="card-img-top" alt="...">
+        <img src="pexels-macedo-fotografo-10883374.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
     <div class="card" style="width: 18rem;">
-        <img src="./img/pexels-mali-maeder-64208.jpg" class="card-img-top" alt="...">
+        <img src="pexels-mali-maeder-64208.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
     <div class="card" style="width: 18rem;">
-        <img src="./img/pexels-olga-lioncat-7245480.jpg" class="card-img-top" alt="...">
+        <img src="pexels-olga-lioncat-7245480.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
@@ -185,8 +185,8 @@
     </div>
     <div class="liste social2">
             <h4 class="fh3">seguici</h4></li>
-            <a href="#"><img src="./img/facebook.png" class="social"></a>
-            <a href="#"><img src="./img/instagram.png" class="social"></a>
+            <a href="#"><img src="facebook.png" class="social"></a>
+            <a href="#"><img src="instagram.png" class="social"></a>
     </div>
 </div>
 
